--- a/_studies/2020-09-17-10.1371_journal.pone.0239252.md
+++ b/_studies/2020-09-17-10.1371_journal.pone.0239252.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'SARS-CoV-2-Positivitätsraten in Verbindung mit zirkulierenden 25-Hydroxyvitamin-D-Spiegeln'
   description: 'SARS-CoV-2-Positivitätsraten im Zusammenhang mit dem zirkulierenden 25-Hydroxyvitamin-D-Spiegel19) weithin verfügbar wird, sollten andere Methoden zur Verringerung der Infektionsraten erforscht werden. In dieser Studie wurde anhand einer retrospektiven, beobachtenden Analyse nicht identifizierter Tests, die in einem nationalen klinischen Labor durchgeführt wurden, untersucht, ob die zirkulierenden 25-Hydroxyvitamin D (25(OH)D)-Spiegel mit den Positivitätsraten für das schwere akute respiratorische Coronavirus 2 (SARS-CoV-2) in Verbindung stehen. Über 190.000 Patienten aus allen 50 Bundesstaaten mit SARS-CoV-2-Ergebnissen von Mitte März bis Mitte Juni 2020 und passenden 25(OH)D-Ergebnissen aus den vorangegangenen 12 Monaten wurden einbezogen. Für den Abgleich mit den Daten der US-Volkszählung und für die Durchführung von Analysen der Rassen-/Ethnizitätsanteile und des Breitengrads waren die Daten der Postleitzahl des Wohnorts erforderlich. Insgesamt wurden 191.779 Patienten eingeschlossen (Durchschnittsalter 54 Jahre; 68 % weiblich). Die SARS-CoV-2-Positivitätsrate lag bei 9,3 % und der mittlere saisonbereinigte 25(OH)D-Wert bei 31,7 (SD 11,7). Die SARS-CoV-2-Positivitätsrate war bei den 39 190 Patienten mit "mangelhaften" 25(OH)D-Werten (<20 ng/ml) (12,5 %) höher als bei den 27 870 Patienten mit "ausreichenden" Werten (30-34 ng/ml) (8,1 %) und den 12 321 Patienten mit Werten ≥55 ng/ml (5,9 %). Der Zusammenhang zwischen dem 25(OH)D-Spiegel und der SARS-CoV-2-Positivität wurde am besten durch die gewichtete polynomiale Regression zweiter Ordnung beschrieben, die sowohl in der Gesamtpopulation als auch in den nach allen untersuchten demografischen Faktoren geschichteten Analysen eine starke Korrelation ergab. Der Zusammenhang zwischen niedrigeren SARS-CoV-2-Positivitätsraten und höheren zirkulierenden 25(OH)D-Spiegeln blieb auch in einem multivariablen logistischen Modell signifikant, bei dem alle einbezogenen demografischen Faktoren berücksichtigt wurden. Die SARS-CoV-2-Positivität steht in starkem und umgekehrtem Zusammenhang mit dem zirkulierenden 25(OH)D-Spiegel, wobei dieser Zusammenhang über alle Breitengrade, Rassen/Ethnien, beide Geschlechter und Altersgruppen hinweg besteht. Unsere Ergebnisse geben Anlass, die Rolle einer Vitamin-D-Supplementierung bei der Verringerung des Risikos einer SARS-CoV-2-Infektion und einer COVID-19-Erkrankung zu untersuchen.' 
-  tags:        [COVID-19, Vitamin D, Vitamin-D-Mangel, Infektionsraten, Schweregrad]
+  tags:        [COVID-19, Vitamin D, Infektionsraten, Schweregrad, Vitamin D-Mangel]
 group:         'Treatments'
 credit:        https://doi.org/10.1371/journal.pone.0239252
 ---
