--- a/_studies/2021-03-05-10.3389_fpubh.2021.624559.md
+++ b/_studies/2021-03-05-10.3389_fpubh.2021.624559.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Der Einfluss des Vitamin-D-Spiegels auf die COVID-19-Infektion: Systematische Überprüfung und Meta-Analyse'
   description: 'Die Coronavirus-Krankheit (COVID-19) ist eine Erkrankung der Atemwege und des -systems, die durch das Schwere Akute Respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) oder neuartige Coronaviren (nCoV) verursacht wird. Bis heute gibt es keine nachweislich heilende Behandlung für dieses Virus, so dass die Prävention nach wie vor die beste Strategie zur Bekämpfung der Coronavirus-Infektion (COVID-19) ist. Es wird angenommen, dass Vitamin-D-Mangel eine Rolle bei der Infektion mit dem Coronavirus (COVID-19) spielt, jedoch gibt es keine schlüssigen Beweise für seine Auswirkungen auf die COVID-19-Infektion. Ziel der vorliegenden Übersichtsarbeit war daher, die verfügbaren Erkenntnisse über den Zusammenhang zwischen dem Vitamin-D-Spiegel und dem Risiko einer COVID-19-Infektion zusammenzufassen. Eine systematische Literaturrecherche in Datenbanken (PUBMED/MEDLINE, Cochrane/Wiley library, Scopus und SciELO) wurde vom 15. Mai 2020 bis zum 20. Dezember 2020 durchgeführt. Studien, die die Wirkung des Vitamin-D-Spiegels auf die COVID-19/SARS-2-Infektion untersuchten, wurden für die Überprüfung berücksichtigt. Die Qualität der eingeschlossenen Studien wurde mithilfe der JBI-Tools bewertet. Es wurde eine Meta-Analyse mit einem Modell mit zufälligen Effekten durchgeführt, und es wurden Odds Ratio mit 95%CI berichtet. Diese systematische Übersichtsarbeit und die Meta-Analyse wurden gemäß der PRISMA-Richtlinie (Preferred Reporting Items for Systematic Review and Meta-Analysis) durchgeführt. Die elektronischen und ergänzenden Recherchen für diese Überprüfung ergaben 318 Datensätze, von denen nur 14 die Einschlusskriterien erfüllten. Die qualitative Synthese deutete darauf hin, dass Personen mit Vitamin-D-Mangel ein höheres Risiko für eine COVID-19-Infektion hatten als Patienten mit ausreichender Vitamin-D-Versorgung. Die gepoolte Analyse ergab, dass bei Personen mit Vitamin-D-Mangel die Wahrscheinlichkeit einer COVID-19-Infektion um 80 % höher war als bei Personen mit ausreichendem Vitamin-D-Spiegel. Der Begg-Test ergab außerdem, dass zwischen den Studien keine signifikante Publikationsverzerrung bestand. Die Subgruppenanalyse ergab, dass das Risiko, eine COVID-19-Infektion zu erwerben, im Fall-Kontroll-Studiendesign relativ höher war. Zusammenfassend lässt sich sagen, dass ein niedriger Serum-25(OH)-Vitamin-D-Spiegel signifikant mit einem höheren Risiko für eine COVID-19-Infektion verbunden war. Die begrenzten derzeit verfügbaren Daten deuten darauf hin, dass ein ausreichender Vitamin-D-Spiegel im Serum mit einem deutlich verringerten Risiko einer COVID-19-Infektion verbunden ist.' 
-  tags:        [COVID-19, SARS-CoV-2, Vitamin-D-Mangel, Vitamin D]
+  tags:        [COVID-19, SARS-CoV-2, Vitamin D, Vitamin D-Mangel]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fpubh.2021.624559
 ---
