--- a/_studies/2021-11-30-10.1016_j.clnesp.2021.09.284.md
+++ b/_studies/2021-11-30-10.1016_j.clnesp.2021.09.284.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin-D-Status von kritisch kranken Patienten mit Covid-19'
   description: 'Vitamin D kann die Immunantwort gegen Atemwegsviren verstärken. Eine Vitamin-D-Behandlung könnte das Auftreten von viralen Atemwegsinfektionen bei Patienten mit Vitamin-D-Mangel verringern(1). Die NICE-Leitlinien(2) kommen zu dem Schluss, dass weitere Untersuchungen erforderlich sind, um die Auswirkungen von Vitamin D auf COVID-19 zu bestätigen; entsprechende Studien sind derzeit in Arbeit. Es ist nicht üblich, den Vitamin-D-Status bei der Aufnahme in die Intensivstation zu testen. Wir haben versucht, den Vitamin-D-Status von Patienten mit akutem schwerem Atemversagen und COVID-19 in einer großen tertiären Intensivstation in Großbritannien zu bestimmen. Wir untersuchten 99 konsekutive Patienten mit COVID-19, die zwischen November 2020 und April 2021 auf der Intensivstation aufgenommen wurden. Alle benötigten mechanische Unterstützung durch ein Beatmungsgerät. Die Serumkonzentration von 25-Hydroxyvitamin D wurde mit einem Tandem-Massenspektrometer gemessen. Ein Mangel galt als gegeben, wenn die Serumkonzentration <25nmol/Liter betrug. Allen Patienten, bei denen ein Mangel festgestellt wurde, wurde eine Vitamin-D-Supplementierung verabreicht. Diese retrospektive Untersuchung wurde mit institutioneller Genehmigung durchgeführt, und es war keine Zustimmung der Patienten erforderlich. Ergebnisse: Bei 44 % (44/99) der Patienten wurde der Vitamin-D-Spiegel bestimmt. 48 % (21/44) der getesteten Patienten wurden als mangelhaft eingestuft. Durchschnittsalter: mangelhaft 48 Jahre (SD ±9 Jahre), nicht mangelhaft 51 Jahre (SD ±11 Jahre). Mittlerer Body Mass Index (BMI): mangelhaft 29,6 kg/m2 (SD ±7,4), nicht mangelhaft 28,7 kg/m2 (SD ±8,1). Unvollständige Daten zur ethnischen Zugehörigkeit der Patienten, so dass ein Vergleich zwischen den Gruppen nicht möglich ist. Durchschnittliche Zeit von der Aufnahme bis zum Bluttestergebnis = 14 Tage (Spanne 1-57 Tage). Vitamin-D-Mangel war in einer Population erwachsener Patienten mit schwerem Atemversagen aufgrund von COVID-19 häufig (48 %). Die Untersuchung des Vitamin-D-Status ist einfach und relativ kostengünstig (16,45 £/Test). Die Behandlung eines Vitamin-D-Mangels bei diesen Patienten könnte von Nutzen sein. Wir kommen zu dem Schluss, dass eine routinemäßige Untersuchung des Vitamin-D-Status von COVID-19-Patienten in der Intensivpflege von Nutzen sein könnte.' 
-  tags:        [Vitamin D, Vitamin-D-Mangel, COVID-19]
+  tags:        [Vitamin D, COVID-19, Vitamin D-Mangel]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.clnesp.2021.09.284
 ---
