--- a/_studies/2021-12-10-10.24018_ejmed.2021.3.6.1131.md
+++ b/_studies/2021-12-10-10.24018_ejmed.2021.3.6.1131.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Vitamin-D-Spiegel bei hospitalisierten und nicht hospitalisierten COVID-19-Patienten im Dr. M. Djamil General Hospital Padang'
   description: 'Die Coronavirus-Krankheit 2019 (COVID-19) verursacht eine Dysregulation des Immunsystems und eine übertriebene systemische Entzündungsreaktion. Vitamin D wirkt als Immunmodulator, der die Immunabwehr stärkt. Niedrige Vitamin-D-Spiegel beeinflussen den Schweregrad der COVID-19-Infektion. Ziel dieser Studie ist die Bestimmung des Vitamin-D-Spiegels bei hospitalisierten und nicht hospitalisierten COVID-19-Patienten. Von Februar bis September 2020 wurde eine Fall-Kontroll-Studie mit 62 COVID-19-Patienten durchgeführt, die zu gleichen Teilen in eine stationäre und eine nicht stationäre Gruppe an der RSUP Dr. M. Djamil, Padang, eingeteilt wurden. Der Vitamin-D-Spiegel im Serum wurde mit dem Chemilumineszenz-Mikropartikel-Immunoassay gemessen. Ein Vitamin-D-Mangel wurde definiert als ein Spiegel von weniger als 20 ng/ml. Die hospitalisierte Gruppe bestand aus mäßigen bis kritischen COVID-19-Patienten, während die nicht hospitalisierte Gruppe aus den asymptomatischen und leichten COVID-19-Patienten gemäß den Richtlinien des indonesischen Gesundheitsministeriums bestand. Alle Daten wurden mit einem T-Test und Chi-Quadrat mit einem signifikanten p-Wert von 0,05 analysiert. Die Ergebnisse zeigten, dass die meisten Probanden Frauen im Alter von 21-60 Jahren waren. Der durchschnittliche Vitamin-D-Spiegel (ng/ml) war in der hospitalisierten Gruppe niedriger als in der nicht hospitalisierten Gruppe. Der Vitamin-D-Mangel betraf die hospitalisierte Gruppe stärker als die nicht hospitalisierte Gruppe, war aber statistisch nicht signifikant (71 % vs. 64,5 %). Dies deutet auf die Rolle von Vitamin D bei der Verhinderung einer Hyperaktivierung des Immunsystems hin, die einen COVID-19-Zytokinsturm verursacht. Diese Studie ergab keinen Unterschied im Vitamin-D-Spiegel zwischen den Studiengruppen. Dennoch sind weitere Forschungen zu Vitamin D erforderlich, um seine Rolle und seinen Nutzen bei einer COVID-19-Infektion zu ermitteln.' 
-  tags:        [COVID-19, Zytokinsturm, Entzündung, Vitamin-D-Mangel]
+  tags:        [COVID-19, Zytokinsturm, Entzündung, Vitamin D-Mangel]
 group:         'Treatments'
 credit:        https://doi.org/10.24018/ejmed.2021.3.6.1131
 ---
