update new studies

--- a/_studies/2022-02-03-10.1038-s41598-022-05832-5.md
+++ b/_studies/2022-02-03-10.1038-s41598-022-05832-5.md
@@ -1,6 +1,6 @@
 ---
 date:          2022-02-03
-title:         Cogent
+title:         Scientific Reports
 authors:       'Byun, J, Han, Y, Walsh, KM, et al.'
 status:        default
 en:
