--- a/_studies/2021-02-26-10.2147_JIR.S295377.md
+++ b/_studies/2021-02-26-10.2147_JIR.S295377.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Bedeutung der Zinktherapie bei der Bekämpfung der globalen Pandemie COVID-19'
   description: 'Die weltweite Pandemie der COVID-19-Infektion hat sowohl in gesundheitlicher als auch in wirtschaftlicher Hinsicht erhebliche Probleme für die öffentliche Gesundheit mit sich gebracht. Bislang gibt es keine spezifische pharmakologische antivirale Therapieoption für das COVID-19-Management. Angesichts der hohen Zahl von Todesfällen durch diese neuartige Coronavirus-Infektion müssen dringend wirksame Arzneimittel sowie Präventions- und Kontrollmethoden entwickelt werden. Akute Atemwegsinfektionen, insbesondere Infektionen der unteren Atemwege, und Lungenentzündungen sind weltweit die Hauptursache für Millionen von Todesfällen. Die Rolle von Mikronährstoffen, einschließlich Spurenelementen, die das menschliche Immunsystem stärken, ist hinlänglich bekannt. Mehrere Vitamine wie Vitamin A, B6, B12, C, D, E und Folsäure, Mikroelemente wie Zink, Eisen, Selen, Magnesium und Kupfer sowie Omega-3-Fettsäuren wie Eicosapentaensäure und Docosahexaensäure spielen eine wesentliche physiologische Rolle bei der Förderung des Immunsystems. Darüber hinaus ist Zink ein unverzichtbares Mikroelement, das für einen umfassenden enzymatischen physiologischen Prozess unerlässlich ist. Es trägt auch zur Regulierung der Gentranskription bei, z. B. der DNA-Replikation, der RNA-Transkription, der Zellteilung und der Zellaktivierung im menschlichen biologischen System. Zusammen mit natürlichen Fresszellen und Neutrophilen ist Zink auch an der Entwicklung von Zellen beteiligt, die für die Regulierung der unspezifischen Immunität zuständig sind. Die modernen Ernährungsgewohnheiten begünstigen häufig einen Zinkmangel; daher wurde bei zahlreichen COVID-19-Patienten, die in Krankenhäusern vorgestellt wurden, häufig ein Zinkmangel diagnostiziert. Frühere Studien haben gezeigt, dass ein Zinkmangel Patienten für Virusinfektionen wie Herpes simplex, Erkältung, Hepatitis C, das schwere akute respiratorische Syndrom (SARS-CoV-1) und das humane Immundefizienzvirus (HIV) prädisponiert, weil er die antivirale Immunität verringert. In diesem Manuskript sollen die verschiedenen Rollen von Zink bei der Behandlung von COVID-19-Infektionen erörtert werden.' 
-  tags:        [Zinktherapie, Mikroelement, immunstärkend, Wirksamkeit, COVID-19, virale Infektionen, Lungenentzündung, Pandemie]
+  tags:        [Zinktherapie, Mikroelement, immunstärkend, Wirksamkeit, COVID-19, Lungenentzündung, Pandemie, Virale Infektionen]
 group:         'Treatments'
 credit:        https://doi.org/10.2147/JIR.S295377
 ---
