--- a/_studies/2021-07-26-10.1111_ijcp.14649.md
+++ b/_studies/2021-07-26-10.1111_ijcp.14649.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Unzureichende Beweise für die Verwendung von Vitamin D bei COVID-19: Eine schnelle systematische Überprüfung'
   description: 'Vitamin-D-Mangel wird mit dem erhöhten Schweregrad zahlreicher viraler Infektionen in Verbindung gebracht. Untersucht werden sollte, ob eine Vitamin-D-Supplementierung für die Behandlung von COVID-19 sicher und wirksam ist. Wir suchten in MEDLINE, EMBASE, CENTRAL, LILACS und LOVE nach randomisierten kontrollierten Studien (RCTs), die bis zum 2. März veröffentlicht wurden und die Wirkung von Vitamin D bei der Behandlung von Coronavirus-Erkrankungen (COVID-19) bewerten. Zwei Autoren wählten die Studien aus und analysierten die Daten gemäß den Cochrane-Empfehlungen. Wir schlossen drei RCTs mit insgesamt 385 Teilnehmern ein. Wir fanden Belege mit geringer Sicherheit, die darauf hinweisen, dass hospitalisierte Patienten unter Calcifediol plus Standardbehandlung (SC) offenbar ein signifikant geringeres Risiko haben, auf die Intensivstation aufgenommen zu werden, aber keinen Unterschied in der Sterblichkeit. Wir fanden Hinweise mit geringer bis sehr geringer Sicherheit, dass die Verbesserung des Fibrinogenspiegels bei Patienten mit leichter oder asymptomatischer COVID-19, die mit Cholecalciferol plus SC behandelt wurden, etwas größer ist als bei Patienten, die mit Placebo plus SC behandelt wurden (mittlerer Unterschied), und dass die Patienten, die mit Cholecalciferol plus SC behandelt wurden, mehr SARS-CoV-2-Negativität erreichten, jedoch nicht bei d-Dimer, c-reaktivem Protein (CRP) oder Procalcitonin im Vergleich zu den Patienten in der Placebo-plus-SC-Gruppe. Außerdem fanden wir Hinweise mit geringer bis mittlerer Sicherheit, dass eine einmalige hohe Dosis Vitamin D bei Patienten mit mittelschwerer bis schwerer COVID-19 die Sterblichkeit, die Dauer des Krankenhausaufenthalts, die Aufnahme in die Intensivstation und die D-Dimer- oder CRP-Werte nicht wirksam zu reduzieren scheint. In der Praxis bedeutet dies, dass die Einnahme von Vitamin D in Verbindung mit SC einen gewissen Nutzen für Patienten mit COVID-19 zu haben scheint. Allerdings ist die Evidenz derzeit unzureichend, um den routinemäßigen Einsatz von Vitamin D für die Behandlung von COVID-19 zu unterstützen, da die Wirksamkeit von der Dosierung, dem Ausgangswert des Vitamin-D-Spiegels und dem Schweregrad von COVID-19 abzuhängen scheint.' 
-  tags:        [COVID-19, Schweregrad, virale Infektionen, Vitamin D-Mangel]
+  tags:        [COVID-19, Schweregrad, Vitamin D-Mangel, Virale Infektionen]
 group:         'Treatments'
 credit:        https://doi.org/10.1111/ijcp.14649
 ---
