--- a/_studies/2020-03-20-10.1016_j.ijantimicag.2020.105949.md
+++ b/_studies/2020-03-20-10.1016_j.ijantimicag.2020.105949.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Hydroxychloroquin und Azithromycin zur Behandlung von COVID-19: Ergebnisse einer offenen nicht-randomisierten klinischen Studie'
   description: 'Hintergrund: Chloroquin und Hydroxychloroquin haben sich bei SARS-CoV-2 als wirksam erwiesen, und es wurde berichtet, dass sie bei chinesischen COV-19-Patienten wirksam sind. Wir bewerten die Wirkung von Hydroxychloroquin auf die Viruslast in den Atemwegen.<br/>Patienten und Methoden: Französische Patienten mit bestätigter COVID-19-Infektion wurden von Anfang März bis zum 16. März in ein einarmiges Protokoll aufgenommen und erhielten täglich 600 mg Hydroxychloroquin, und ihre Viruslast in Nasopharyngealabstrichen wurde täglich in einem Krankenhaus getestet. Je nach klinischem Bild wurde die Behandlung mit Azithromycin ergänzt. Unbehandelte Patienten aus einem anderen Zentrum und Fälle, die das Protokoll ablehnten, wurden als Negativkontrollen einbezogen. Das Vorhandensein bzw. die Abwesenheit von Viren am 6. Tag nach der Aufnahme wurde als Endpunkt betrachtet.<br/>Ergebnisse: Sechs Patienten waren asymptomatisch, hatten Symptome einer Infektion der oberen Atemwege und acht hatten Symptome einer Infektion der unteren Atemwege. Zwanzig Fälle wurden in dieser Studie behandelt und zeigten eine signifikante Verringerung der Virusträgerschaft am Tag 6 nach dem Einschluss im Vergleich zu den Kontrollen und eine viel geringere durchschnittliche Übertragungsdauer als in der Literatur für unbehandelte Patienten berichtet. Azithromycin in Kombination mit Hydroxychloroquin war für die Viruseliminierung deutlich wirksamer.<br/>Schlussfolgerung: Trotz des geringen Stichprobenumfangs zeigt unsere Studie, dass die Behandlung mit Hydroxychloroquin bei COVID-19-Patienten signifikant zur Senkung bzw. zum Verschwinden der Viruslast beiträgt und dass diese Wirkung durch Azithromycin verstärkt wird.' 
-  tags:        [2019-nCoV, SARS-CoV-2, COVID-19, Hydroxychloroquin, Azithomycin, klinische Studie]
+  tags:        [2019-nCoV, SARS-CoV-2, COVID-19, Hydroxychloroquin, Azithomycin, Klinische Studien]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.ijantimicag.2020.105949
 ---
