--- a/_studies/2021-06-24-10.3390_nu13072170.md
+++ b/_studies/2021-06-24-10.3390_nu13072170.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen einer zweiwöchigen Supplementierung mit 5000 IE gegenüber 1000 IE Vitamin D3 auf die Verringerung der Symptome bei Patienten mit leichter bis mittelschwerer Covid-19-Erkrankung: Eine randomisierte klinische Studie'
   description: 'Ein Vitamin-D-Mangel wurde mit einem erhöhten Risiko für den Schweregrad von COVID-19 in Verbindung gebracht. Diese multizentrische, randomisierte klinische Studie zielt darauf ab, die Auswirkungen einer täglichen oralen Vitamin-D3-Supplementierung mit 5000 IE im Vergleich zu 1000 IE auf die Verringerung der Symptome und andere klinische Parameter bei leicht bis mittelschwer an COVID-19 erkrankten Patienten mit suboptimalem Vitamin-D-Status zu untersuchen. Insgesamt 69 Reverse-Transkriptase-Polymerase-Kettenreaktion (RT-PCR) SARS-CoV-2-positive Erwachsene, die wegen einer leichten bis mittelschweren COVID-19-Erkrankung ins Krankenhaus eingeliefert wurden, erhielten zwei Wochen lang einmal täglich entweder 5000 IE orales Vitamin D3 (n = 36, 21 Männer; 15 Frauen) oder 1000 IE orales Vitamin D3 (Standardkontrolle) (n = 33, 13 Männer; 20 Frauen). Vor und nach der Supplementierung wurden die anthropometrischen Daten gemessen und Blutproben entnommen. Nüchternblutglukose, Lipide, Serum 25(OH)D und Entzündungsmarker wurden gemessen. Die COVID-19-Symptome wurden bei der Aufnahme erfasst und bis zur vollständigen Genesung überwacht. Eine 2-wöchige Vitamin-D-Supplementierung führte nur in der Gruppe mit 5000 IE zu einem signifikanten Anstieg des Serum-25(OH)D-Spiegels. Vergleiche innerhalb der Gruppen zeigten auch einen signifikanten Rückgang des BMI und der IL-6-Werte im Laufe der Zeit in beiden Gruppen, der jedoch bei Vergleichen zwischen den Gruppen nicht klinisch signifikant war. Die Kaplan-Meier-Überlebensanalyse ergab, dass die 5000-IU-Gruppe eine signifikant kürzere Zeit bis zur Genesung (Tage) hatte als die 1000-IU-Gruppe, was das Abklingen des Hustens betraf, selbst nach Anpassung für Alter, Geschlecht, Ausgangs-BMI und D-Dimer und Ageusie (Geschmacksverlust). Eine tägliche orale Vitamin-D3-Supplementierung von 5000 IE über einen Zeitraum von zwei Wochen verkürzt bei Patienten mit suboptimalem Vitamin-D-Status und leichten bis mittelschweren COVID-19-Symptomen die Zeit bis zur Genesung bei Husten und Geschmacksstörungen. Die Verwendung von 5000 IE Vitamin D3 als adjuvante Therapie für COVID-19-Patienten mit suboptimalem Vitamin-D-Status, auch für kurze Zeit, wird empfohlen.' 
-  tags:        [COVID-19, Vitamin D, klinische Studie, Saudi, Vitamin-D-Insuffizienz]
+  tags:        [COVID-19, Vitamin D, Saudi, Vitamin-D-Insuffizienz, Klinische Studien]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu13072170
 ---
