--- a/_studies/2021-09-09-10.1016_j.eclinm.2021.101125.md
+++ b/_studies/2021-09-09-10.1016_j.eclinm.2021.101125.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen der oralen Zugabe von L-Arginin zur Standardtherapie bei Patienten mit COVID-19: Eine randomisierte, doppelblinde, placebokontrollierte Parallelgruppenstudie. Ergebnisse der ersten Zwischenanalyse'
   description: 'Wir und andere haben bereits gezeigt, dass das Endothel ein primäres Ziel des schweren akuten respiratorischen Syndroms Coronavirus 2 (SARS-CoV-2) ist, und es hat sich gezeigt, dass L-Arginin die endotheliale Dysfunktion verbessert. Die Auswirkungen von L-Arginin wurden jedoch noch nie bei der Coronavirus-Krankheit 2019 (COVID-19) untersucht. Dies ist eine parallele, doppelblinde, randomisierte, placebokontrollierte Studie, die an Patienten durchgeführt wurde, die wegen einer schweren COVID-19-Erkrankung ins Krankenhaus eingeliefert wurden. Die Patienten erhielten zweimal täglich 1,66 g L-Arginin oder Placebo, die oral verabreicht wurden. Der primäre Wirksamkeitsendpunkt war eine Verringerung der Beatmungsunterstützung, die 10 und 20 Tage nach der Randomisierung gemessen wurde. Sekundäre Endpunkte waren die Dauer des Krankenhausaufenthalts, die Zeit bis zur Normalisierung der Lymphozytenzahl und die Zeit bis zum Erhalt einer negativen Reverse-Transkriptions-Polymerase-Kettenreaktion (RT-PCR) in Echtzeit für SARS-CoV-2 auf einem Nasopharyngealabstrich. Wir stellen hier die Ergebnisse der ersten Zwischenanalyse der ersten 101 Patienten vor. Keine behandlungsbedingten schwerwiegenden unerwünschten Ereignisse waren auf L-Arginin zurückzuführen. Bei der 10-Tage-Auswertung wurde bei 71,1 % der Patienten im L-Arginin-Arm und bei 44,4 % im Placebo-Arm die Atemunterstützung reduziert; 20 Tage nach der Randomisierung wurde jedoch kein signifikanter Unterschied festgestellt. Auffallend ist, dass die mit L-Arginin behandelten Patienten eine signifikant kürzere Verweildauer im Krankenhaus aufwiesen als die Placebogruppe, mit einem Median (Interquartilsbereich 25., 75. Perzentil) von 46 Tagen (45, 46) in der Placebogruppe gegenüber 25 Tagen (21, 26) in der L-Arginin-Gruppe; diese Ergebnisse wurden auch nach Adjustierung für potenzielle Störfaktoren wie Alter, Dauer der Symptome, Begleiterkrankungen, D-Dimer sowie antivirale und gerinnungshemmende Behandlungen bestätigt. Bei den anderen sekundären Endpunkten gab es keine signifikanten Unterschiede zwischen den Gruppen. In dieser Zwischenanalyse führt die zusätzliche Einnahme von oralem L-Arginin zur Standardtherapie bei Patienten mit schwerer COVID-19 zu einer signifikanten Verringerung der Dauer des Krankenhausaufenthalts und zu einer Reduzierung der Beatmungsunterstützung 10, aber nicht 20 Tage nach Beginn der Behandlung.' 
-  tags:        [COVID-19, Endotheliale Dysfunktion, SARS-CoV-2, Arginin, Klinische Studie, Coronavirus, Immunantwort]
+  tags:        [COVID-19, Endotheliale Dysfunktion, SARS-CoV-2, Arginin, Coronavirus, Immunantwort, Klinische Studien]
 group:         'Treatments'
 credit:        https://doi.org/10.1016/j.eclinm.2021.101125
 ---
