--- a/_studies/2022-01-01-10.19803_j.1672-8629.2022.01.01.md
+++ b/_studies/2022-01-01-10.19803_j.1672-8629.2022.01.01.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Riesenfortschritt bei antiviralen Arzneimitteln mit kleinen Molekülen gegen SARS-CoV-2'
   description: 'Untersuchung von Anti-SARS-CoV-2-Medikamenten aus der Gruppe der Proteaseinhibitoren und der RNA-abhängigen RNA-Polymerase-Inhibitoren. Methoden Der Wirkmechanismus, die Pharmakokinetik und die klinischen Versuche von zwei Arten von Medikamenten werden überprüft. Kleinmolekulare Arzneimittel haben den Vorteil, dass sie leicht absorbiert werden können, ein kleines Molekülvolumen haben, die Zellmembran durchdringen können und leicht in großem Maßstab industriell hergestellt werden können, was den Schwerpunkt der Arzneimittelforschung und -entwicklung bildet. Bei den niedermolekularen Arzneimitteln gegen SARS-CoV-2 wurden Durchbrüche bei den Proteaseinhibitoren (z. B. Paxlovid), die auf den viralen Proteinspleißschritt abzielen, und den RNA-abhängigen RNA-Polymerase-Inhibitoren (z. B. Molnupiravir) erzielt. Es wird erwartet, dass diese Medikamente in Zukunft in der Frühbehandlung eingesetzt werden können, um die Rate der schweren Erkrankungen und der Sterblichkeit zu senken.' 
-  tags:        [niedermolekulare Arzneimittel, COVID-19, SARS-CoV-2, Protease-Inhibitor, Polymerase-Inhibitor, klinische Studien]
+  tags:        [niedermolekulare Arzneimittel, COVID-19, SARS-CoV-2, Protease-Inhibitor, Polymerase-Inhibitor, Klinische Studien]
 group:         'Treatments'
 credit:        http://www.zgywjj.com/EN/10.19803/j.1672-8629.2022.01.01
 ---
